RESOLVED FIXED153711
[B3] REGRESSION(r195882): Should break early after modConstant replaceWithNewValue succeeds
https://bugs.webkit.org/show_bug.cgi?id=153711
Summary [B3] REGRESSION(r195882): Should break early after modConstant replaceWithNew...
Yusuke Suzuki
Reported 2016-01-30 10:00:00 PST
[B3] REGRESSION(r195882): Should break early after modConstant replaceWithNewValue succeeds
Attachments
Patch (1.77 KB, patch)
2016-01-30 10:01 PST, Yusuke Suzuki
fpizlo: review+
Yusuke Suzuki
Comment 1 2016-01-30 10:01:50 PST
Yusuke Suzuki
Comment 2 2016-01-30 10:10:04 PST
Yusuke Suzuki
Comment 3 2016-01-30 10:10:18 PST
Thanks :) landed.
Note You need to log in before you can comment on or make changes to this bug.