[B3] REGRESSION(r195882): Should break early after modConstant replaceWithNewValue succeeds https://bugs.webkit.org/show_bug.cgi?id=153711

Reviewed by Filip Pizlo.

Should break after modConstant replaceWithNewValue succeeds. m_value is already replaced with Identity
if modConstant succeeds. So it does not have any children. m_value->child(1) breaks testb3.

* b3/B3ReduceStrength.cpp:

Canonical link: https://commits.webkit.org/171776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195898 268f45cc-cd09-0410-ab3c-d52691b4dbfc